--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^5.1.1",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
