--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.mjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "nodemon src/index.mjs",
+    "dev": "nodemon src/index.mjs",
     "start": "node src/index.mjs"
   },
   "keywords": [],
